# pg1

Praktikum01/Aufgabe01/: main1  main1.cpp
Praktikum01/Aufgabe02/: main2  main2.cpp
Praktikum01/Aufgabe03/: main3  main3.cpp
Praktikum01/Aufgabe04/: main4  main4.cpp
Praktikum01/Aufgabe06/: CMakeLists.txt  main.cpp
Praktikum01/Aufgabe51/: all_cmds.txt  compleeverything.sh
Praktikum01/Aufgabe52/: 5.2.1.loesung  5.2.2.loesung  Makefile  aufgabe52  func1.h  func2.cpp  func2.h  main5.cpp
Praktikum01/Aufgabe53/: CMakeLists.txt  func1.cpp  main5.cpp
Praktikum02/: aufgabe1  aufgabe1.cpp  aufgabe2  aufgabe2.cpp  aufgabe3.cpp  aufgabe4  aufgabe4.cpp  aufgabe5  aufgabe5.cpp
Praktikum03/: aufgabe1_1  aufgabe1_1.cpp  aufgabe1_2  aufgabe1_2.cpp  aufgabe2  aufgabe2.cpp
Praktikum04/: functions.cpp  functions.h
Praktikum06/: main.cpp  main.h
praktikum5/: CMakeLists.txt  battleship.cpp  battleship.h  gameboard.cpp  gameboard.h  main.cpp  part.cpp  part.h  player.cpp  player.h  ship.cpp  ship.h
